--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/HeadLinkLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
-    <title>DanXtech Portifilo 🧛‍♀️</title>
+    <title>Car - Rental - App </title>
   </head>
   <body>
     <div id="root"></div>
